--- a/mummysite.html
+++ b/mummysite.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<center>
+<body style="background-color:#467239;">
 <h1>
 HALLLLLLLLLLO its a me, Olivia: your favourite trans Egirl!!!!!!!!!!!!!
 </h1>
 </body>
+</center>
 </html>
