--- a/mummysite.html
+++ b/mummysite.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
+<body style="background-color:powderblue;">
 <center>
-<body style="background-color:#467239;">
 <h1>
 HALLLLLLLLLLO its a me, Olivia: your favourite trans Egirl!!!!!!!!!!!!!
 </h1>
-</body>
+<p1>
+I'm a good girl who likes cuddles!! <3
 </center>
+<br>
+<br>
+<br>
+Well this is me and my bestie, her name is Jess. On the left you can see Euan and I like him but he cant be my bf :(
+<picture>
+<img src="bestie.png" alt="Well basically there should be a pic here but its not loading rn, idk why :(" style="width:450px;height:200px;">
+</picture>
+</body>
 </html>
